# koed_labs

./: CMakeLists.txt  CMakeLists.txt.in  README.md
koed_lab_1/: CMakeLists.txt  main.cpp  student_table.cpp  student_table.h  table_reader.cpp  table_reader.h
koed_lab_2/: CMakeLists.txt  main.cpp
koed_lab_3/: CMakeLists.txt  main.cpp
koed_lab_4/: CMakeLists.txt  data_set.cpp  data_set.h  main.cpp
koed_lab_5/: CMakeLists.txt  main.cpp
koed_shared/: CMakeLists.txt  matrix.cpp  matrix.h  matrix_alg.h  matrix_unittest.cpp
koed_tests/: CMakeLists.txt
resources/: lab2_test.txt  lab3_test1.txt  lab3_test2.txt  lab4_test.txt  lab5_table.txt  student_table.txt  table.txt
