# CMakeList.txt : Top-level CMake project file
cmake_minimum_required (VERSION 3.8)

project(koed_labs)

# Include sub-projects.
add_subdirectory (koed_lab_1)
add_subdirectory (koed_lab_2)
add_subdirectory (koed_lab_3)
add_subdirectory (koed_lab_4)
add_subdirectory (koed_lab_5)
add_subdirectory (koed_shared)
